--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </figcaption>
         </figure>
         <figure class="card col-md-4">
-            <img src=/fotos/fondo4.jpeg alt="bici en carrera">
+            <img src="./fotos/fondo4.jpeg" alt="bici en carrera">
             <figcaption>
                 <h2 class="text-center">Salta 10/05/2022: </h2>
                 Invierno, Salta, 7 dias de recorrido imperdible, transitando las dunas, valles y cerros, pasando por Jujuy y las salinas. 
@@ -66,7 +66,7 @@
             </figcaption>
         </figure>
         <figure class="card col-md-4">
-            <img src=/fotos/montaña3.jpeg alt="montañismo en bici">
+            <img src="./fotos/montaña3.jpeg" alt="montañismo en bici">
             <figcaption>
                 <h2 class="text-center">La Pampa 20/08/2022: </h2>
                 La llanura pampeana pedaleada por 5 días donde la intensidad es baja, pero la buena onda, la cabaña y los cambios de ritmo dominan las salidas.
