--- a/destinos.html
+++ b/destinos.html
@@ -46,12 +46,12 @@
     
     <h2 class="XL text-center">Destinos</h2>
     <div class="destinos animado">
-        <figure class="col-md-6"><h2 class="text-center">Mendoza</h2>
+        <figure class="col-md-6 col-xs-12"><h2 class="text-center">Mendoza</h2>
             <img class="separacion w-50" src="./fotos/nieve1.jpg" alt="paisaje de nieve"><img class="separacion w-50" src="./fotos/nieve4.jpeg" alt="paisaje de nieve">
             <figcaption class="text-center"><h5>Mendoza en pleno invierno, montañas nevadas, clima hostil, nivel experto.</h5><br>
             </figcaption>
         </figure>
-        <figure class="col-md-6"><h2 class="text-center">Bolivia</h2>
+        <figure class="col-md-6 col-xs-12"><h2 class="text-center">Bolivia</h2>
             <img class="separacion w-50" src="./fotos/montaña4.jpg" alt="paisaje de montaña"><img class="separacion w-50" src="./fotos/montaña2.jpeg" alt="paisaje montaña">
             <figcaption class="text-center"><h5>Las yungas de La paz, Bolivia, un destino imperdible, a 600 mts sobre el nivel del mar, el recorrido nos lleva a través 
                 de verdes laderas, precipicios, ríos, cascadas y una exuberante vegetación.</h5><br>
