--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <h1 class="text-center XL">Próximas salidas</h1>
 
     <div class="proximas-salidas animado">
-        <figure class="card col-md-4">
+        <figure class="card col-md-4 col-xs-12">
             <img src="./fotos/paisaje.jpeg" alt="paisaje en bici">
             <figcaption>
                 <h2 class="text-center">Mendoza 03/03/2022:</h2> 
@@ -56,7 +56,7 @@
                 <div class="countdown text-center" id="clock1"></div>
             </figcaption>
         </figure>
-        <figure class="card col-md-4">
+        <figure class="card col-md-4 col-xs-12">
             <img src="./fotos/fondo4.jpeg" alt="bici en carrera">
             <figcaption>
                 <h2 class="text-center">Salta 10/05/2022: </h2>
@@ -65,7 +65,7 @@
                 <div class="countdown text-center" id="clock2"></div>
             </figcaption>
         </figure>
-        <figure class="card col-md-4">
+        <figure class="card col-md-4 col-xs-12">
             <img src="./fotos/montaña3.jpeg" alt="montañismo en bici">
             <figcaption>
                 <h2 class="text-center">La Pampa 20/08/2022: </h2>
@@ -87,7 +87,7 @@
 
     <h2 class="XL text-center">Destinos</h2>
     <div class="destinos animado">
-        <figure class="col-md-6"><h2 class="text-center">Mendoza</h2>
+        <figure class="col-md-6 col-xs-12"><h2 class="text-center">Mendoza</h2>
             <img class="separacion w-50" src="./fotos/nieve1.jpg" alt="paisaje de nieve"><img class="separacion w-50" src="./fotos/nieve4.jpeg" alt="paisaje de nieve">
             <figcaption class="text-center"><h5>Mendoza en pleno invierno, montañas nevadas, clima hostil, nivel experto.</h5><br>
                 <a href="destinos.html">
@@ -95,7 +95,7 @@
                 </a>
             </figcaption>
         </figure>
-        <figure class="col-md-6"><h2 class="text-center">Bolivia</h2>
+        <figure class="col-md-6 col-xs-12"><h2 class="text-center">Bolivia</h2>
             <img class="separacion w-50" src="./fotos/montaña4.jpg" alt="paisaje de montaña"><img class="separacion w-50" src="./fotos/montaña2.jpeg" alt="paisaje montaña">
             <figcaption class="text-center"><h5>Las yungas de La paz, Bolivia, un destino imperdible, a 600 mts sobre el nivel del mar, el recorrido nos lleva a través 
                 de verdes laderas, precipicios, ríos, cascadas y una exuberante vegetación.</h5><br>
@@ -110,12 +110,12 @@
 
     <h2 class="XL text-center">Nuestras travesías</h2>
     <div class="galeria animado">
-        <img class="col-md-4" src="./fotos/ruta1.jpeg" alt="foto de ruta en bici">
-        <img class="col-md-4" src="./fotos/ruta2.jpeg" alt="foto de ruta en bici">
-        <img class="col-md-4" src="./fotos/ruta3.jpeg" alt="foto de ruta en bici">
-        <img class="col-md-4 hidden" src="./fotos/fondo4.jpeg" alt="fondo de bici">
-        <img class="col-md-4 hidden" src="./fotos/montaña4.jpg" alt="foto de montaña en bici">
-        <img class="col-md-4 hidden" src="./fotos/nieve2.jpeg" alt="foto de nieve en bici">
+        <img class="col-md-4 col-xs-12" src="./fotos/ruta1.jpeg" alt="foto de ruta en bici">
+        <img class="col-md-4 col-xs-12" src="./fotos/ruta2.jpeg" alt="foto de ruta en bici">
+        <img class="col-md-4 col-xs-12" src="./fotos/ruta3.jpeg" alt="foto de ruta en bici">
+        <img class="col-md-4 col-xs-12 hidden" src="./fotos/fondo4.jpeg" alt="fondo de bici">
+        <img class="col-md-4 col-xs-12 hidden" src="./fotos/montaña4.jpg" alt="foto de montaña en bici">
+        <img class="col-md-4 col-xs-12 hidden" src="./fotos/nieve2.jpeg" alt="foto de nieve en bici">
     </div>
 
     <hr>
