--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </figcaption>
         </figure>
         <figure class="card col-md-4 col-xs-12">
-            <img src="./fotos/montaña3.jpeg" alt="montañismo en bici">
+            <img src="./fotos/ruta5.jpeg" alt="montañismo en bici">
             <figcaption>
                 <h2 class="text-center">La Pampa 20/08/2022: </h2>
                 La llanura pampeana pedaleada por 5 días donde la intensidad es baja, pero la buena onda, la cabaña y los cambios de ritmo dominan las salidas.
